--- a/post_event_reporting_master.Rmd
+++ b/post_event_reporting_master.Rmd
@@ -2,7 +2,9 @@
 title: "Post_Event_Report"
 author: "Sam Gottuso"
 date: "December 7, 2017"
-output: html_document
+output:
+  html_document: 
+    theme: journal
 ---
 
 ```{r setup, include=FALSE}
