--- a/post_event_reporting_master.Rmd
+++ b/post_event_reporting_master.Rmd
@@ -21,6 +21,7 @@ library(zipcode)
 library(rgdal)
 library(grid)
 library(gridExtra)
+library(mapview)
 
 
 
@@ -379,10 +380,11 @@ state_shapes$COUNT<-state_count[as.character(state_shapes$STUSPS)]
 state_shapes$COUNT<-ifelse(is.na(state_shapes$COUNT),0,state_shapes$COUNT)
 bins<-c(0,.5,.75,1,3,5,7,9,11,13,15,20,25,30,50,Inf)
 pal_fil <- invisible(colorBin("YlOrRd", domain = state_shapes$COUNT,bins = bins))
-leaflet(state_shapes)%>%
+practice_map<-leaflet(state_shapes)%>%
   setView(-80,37.8,3.25)%>%
   addPolygons(color="#4444444",fillColor = ~pal_fil(COUNT),weight = 2, opacity =1, fillOpacity = .8,highlight=
                 highlightOptions(weight = 5, bringToFront = TRUE),label=paste(state_shapes$STUSPS,state_count[as.character(state_shapes$STUSPS)]))
+mapview(practice_map)
 
 
 
